Fixing overflow

--- a/client/stylesheets/controls.styl
+++ b/client/stylesheets/controls.styl
@@ -197,7 +197,8 @@
     width 100%
     max-height 56px
     line-height 16px
-    overflow scroll
+    overflow-x hidden
+    overflow-y scroll
     word-wrap break-word
     white-space normal
   .ga-instagram-overlay-date
